--- a/src/lang/ja_ALL.xml
+++ b/src/lang/ja_ALL.xml
@@ -3043,30 +3043,44 @@ Powered by サテライトオフィス 　http://www.sateraito.jp/
 	<msg name="SHOW_DETAIL"><![CDATA[詳細を表示]]></msg>
 	<msg name="NO_MORE_DETAIL"><![CDATA[詳細情報はありません。]]></msg>
 
-	<msg name="ADD_TEMPLATE"><![CDATA[Add Template ]]></msg>
-	<msg name="SEARCH_DISPLAY_NAME"><![CDATA[Search Display Name ]]></msg>
-	<msg name="EDIT_TEMPLATE"><![CDATA[Edit Template ]]></msg>
-	<msg name="TEMPLATE"><![CDATA[Template ]]></msg>
-	<msg name="TEMPLATE_SETTING"><![CDATA[Template Setting ]]></msg>
-	<msg name="LIST_TEMPLATE"><![CDATA[List Template ]]></msg>
-	<msg name="NOT_YET_SETUP_FILE"><![CDATA[Not yet setup file, please contact the administrator. ]]></msg>
-	<msg name="LOAD_MORE"><![CDATA[Load More ]]></msg>
-	<msg name="CHOOSE_A_TEMPLATE"><![CDATA[Please choose a template? ]]></msg>
-	<msg name="PRESS_START_BUTTON"><![CDATA[Please Press the start button to execute the actions. ]]></msg>
-	<msg name="PLEASE_CHOOSE_A_ACTION"><![CDATA[Please choose a action. ]]></msg>
-	<msg name="PLEASE_CHOOSE_A_SHEET"><![CDATA[Please choose a sheet of template file ?]]></msg>
-	<msg name="PLEASE_START_OVER"><![CDATA[Please start over.]]></msg>
-	<msg name="YOUR_ANSWER_IS_INVALID"><![CDATA[Your answer is invalid. Please choose a action above. ]]></msg>
-	<msg name="SHEETS_WAS_NOT_ALLOWED_SETUP"><![CDATA[Sheets was not allowed to set up the question. Please select another sheet. ]]></msg>
-	<msg name="YOU_ARE_FINISH_PCYA"><![CDATA[You are finish. Please confirm your answer. ]]></msg>
-	<msg name="YOU_ARE_FINISH"><![CDATA[You are finish. ]]></msg>
-	<msg name="PLEASE_CONFIRM_YOU_ANSWER"><![CDATA[Please confirm your answer above. ]]></msg>
-	<msg name="YOU_CAN_SKIP"><![CDATA[ (You can skip this question)]]></msg>
-	<msg name="PLEASE_WAIT_WHILE_WE_CREATE"><![CDATA[Please wait while we create the file for you.]]></msg>
-	<msg name="YOU_ARE_WANT_TO_DOWNLOAD"><![CDATA[You are want to download ?]]></msg>
-	<msg name="AN_ERROR_ACCURRED"><![CDATA[An error occurred. Please try again !!!]]></msg>
-	<msg name="START"><![CDATA[Start]]></msg>
-	<msg name="HELP"><![CDATA[Help]]></msg>
-	<msg name="SKIP"><![CDATA[Skip]]></msg>
+	<msg name="ADD_TEMPLATE"><![CDATA[テンプレートの追加]]></msg>
+	<msg name="SEARCH_DISPLAY_NAME"><![CDATA[表示名の検索]]></msg>
+	<msg name="EDIT_TEMPLATE"><![CDATA[テンプレートの変更]]></msg>
+	<msg name="TEMPLATE"><![CDATA[テンプレート]]></msg>
+	<msg name="TEMPLATE_SETTING"><![CDATA[テンプレート設定]]></msg>
+	<msg name="LIST_TEMPLATE"><![CDATA[テンプレート一覧]]></msg>
+	<msg name="NOT_YET_SETUP_FILE"><![CDATA[テンプレートをまだ設定していないので、管理者に連絡してください。]]></msg>
+	<msg name="LOAD_MORE"><![CDATA[次へ]]></msg>
+	<msg name="CHOOSE_A_TEMPLATE"><![CDATA[テンプレートを選択してください]]></msg>
+	<msg name="PRESS_CHOOSE_TEMPLATE_BUTTON"><![CDATA[リッチメニューに「テンプレート選択」を選択してください。]]></msg>
+	<msg name="PLEASE_CHOOSE_A_TEMPLATE"><![CDATA[テンプレートを選択ください。]]></msg>
+	<msg name="PLEASE_CHOOSE_A_SHEET"><![CDATA[テンプレートのシートを選択ください。]]></msg>
+	<msg name="MSG_DENY_CREATE_FILE"><![CDATA[プロセスが終了しました。テンプレートを変更すると、リッチメニューに「テンプレート選択」を選択してください。]]></msg>
+	<msg name="YOUR_ANSWER_IS_INVALID"><![CDATA[回答は無効です。 上記のアクションを選択してください。]]></msg>
+	<msg name="SHEETS_WAS_NOT_ALLOWED_SETUP"><![CDATA[このシートは質問を設定することを設定されていないので、 他のシートを選択してください。]]></msg>
+
+<!--	<msg name="YOU_ARE_FINISH_PCYA"><![CDATA[終了しました。回答を確認してください。]]></msg>-->
+	<msg name="YOU_ARE_FINISH_PCYA"><![CDATA[終了しました。ファイルを作成しますか?]]></msg>
+	<msg name="YOU_ARE_FINISH"><![CDATA[終了しました。]]></msg>
+	<msg name="PLEASE_CONFIRM_YOUR_ANSWER"><![CDATA[上記の回答を確認してください。]]></msg>
+	<msg name="YOU_CAN_SKIP"><![CDATA[（スキップできます。）]]></msg>
+	<msg name="PLEASE_WAIT_WHILE_WE_CREATE"><![CDATA[ファイルが作成されるまでお待ちください。]]></msg>
+	<msg name="MSG_CHOOSE_FILE_FORMAT_TO_DOWNLOAD"><![CDATA[ファイルを作成されました。ダウンロードのため、フォーマットを選択ください。]]></msg>
+	<msg name="AN_ERROR_ACCURRED"><![CDATA[エラーが発生します。]]></msg>
+	<msg name="SKIP"><![CDATA[スキップ]]></msg>
+	<msg name="CHOOSE_TEMPLATE"><![CDATA[テンプレート選択]]></msg>
+	<msg name="HELP_MESSAGE"><![CDATA[リッチメニューからテンプレートを選択できます。]]></msg>
+	<msg name="VMSG_TEMPLATE_CONFIRM_DELETE" js="on"><![CDATA[このテンプレートを削除しますか？]]></msg>
+	<msg name="NO"><![CDATA[いいえ]]></msg>
+
+	<msg name="MSG_PREVIOUS_SESSION_FINISHED"><![CDATA[前のセッションは終了しました。]]></msg>
+	<msg name="MSG_FOLLOW_CURRENT_PROCESS"><![CDATA[前のセッションは終了しました。現在のプロセスに沿って続けてください。]]></msg>
+
+	<msg name="VMSG_DISPLAY_NAME"><![CDATA[表示名]]></msg>
+	<msg name="VMSG_FILE_NAME"><![CDATA[ファイル名]]></msg>
+	<msg name="EXCEL_PDF_CREATION_HTML_TITLE"><![CDATA[サテライトオフィス・チャットでExcel/Pdf作成機能 for LINE WORKS]]></msg>
+	<msg name="MSG_FILE_TEMPLATE"><![CDATA[ファイルテンプレート]]></msg>
+	<msg name="MSG_REQUIRE_FILE_TEMPLATE" js="on"><![CDATA[ファイルテンプレートは必須です。]]></msg>
+	<msg name="MSG_REQUIRE_DISPLAY_NAME" js="on"><![CDATA[表示名は必須です。]]></msg>
 
 </messagebundle>
