--- a/src/lang/ja_ALL.xml
+++ b/src/lang/ja_ALL.xml
@@ -3090,4 +3090,6 @@ Powered by サテライトオフィス 　http://www.sateraito.jp/
 	<msg name="CLICK_CANCEL_IN_THE_QUESTION"><![CDATA[Click cancel in the question list to select another sheet or file.]]></msg>
 	<msg name="ADD_MORE" js="on"><![CDATA[Add More]]></msg>
 	<msg name="FILE_IS_NOT_SUPPORTED" js="on"><![CDATA[File error or is not supported. Please choose a valid file and try again !]]></msg>
+	<msg name="SUBMIT" js="on"><![CDATA[Submit]]></msg>
+	<msg name="ACTIONS"><![CDATA[Actions]]></msg>
 </messagebundle>
